# midas-journal-839

HausdorffDistance/: README
HausdorffDistance/Codes/: CMakeLists.txt  HausdorffDistance.cxx  HausdorffDistanceMenu.xml  HausdorffDistancePointSetFilter.xml  testHausdorffDistance.cxx
HausdorffDistance/Latex/: Makefile  document.aux  document.bbl  document.brf  document.out  document.tex  document.tex~  document.toc  references.bib
HausdorffDistance/Latex/Resources/: contour0.vtp  contour1.vtp  contour2.vtp  contour3.vtp  contour4.vtp  contour5.vtp  contour6.vtp  hausdorff_aliasing  hausdorff_aliasing.py  print_hausdorff.sh  printfield.py  sphere.vtp  sphere1.vtp  sphere2.vtp  sphere3.vtp  sphere4.vtp  sphere5.vtp  sphere6.vtp  sphere7.vtp  sphere8.vtp
